--- a/styles.css
+++ b/styles.css
@@ -64,7 +64,7 @@ ul li a:hover {
         gap: 1em;
         background-color: cyan;
         left: 0;
-        width: 300px;
+        wi  ````````dth: 300px;
         height: 100vh;
         top: 0;
         transition: .3s ease-in-out;
